completes initial styles for header, fixes bugs with centre aligning title, with left aligned icon

--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -27,8 +27,8 @@
     :root {
 
         --font__size__main: 1.25rem;
-        --font__size__sub: 2.25rem;
-        --font__size__heading: 3.25rem
+        --font__size__sub: 2rem;
+        --font__size__heading: 3rem;
     }
 }
 
@@ -72,10 +72,23 @@ h1, h2,h3 {margin: 0;}
 */
 .header {
     display: flex;
-    justify-content: space-evenly;
 
     background-color: rgb(20, 20, 20);
     color: whitesmoke;
+    justify-content: space-between;
+}
+
+.sub-heading {
+    padding-top: 2vh;
+    margin-bottom: 2vh;
+
+    background-color: rgb(20, 20, 20);
+    color: whitesmoke;
+    text-align: center;
+}
+
+#logo {
+    left: 100px;
 }
 
 
@@ -121,8 +134,12 @@ h1, h2,h3 {margin: 0;}
 
     min-height:5vh;
     width: 100%;
+    
+
     display: flex;
     justify-content: flex-end;
+    flex-basis: 100%;
+    /*flex-basis: 100%;*/
     gap:6rem;
 
     background-color: var(--dominant);
